<resources>
    <string name="app_name">Organizer</string>
    <string name="notes">Tasks</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notes_list_fragment">Notes List fragment</string>
    <string name="calendar_fragment">Calendar fragment</string>
    <string name="map_fragment">Map fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="login_form">Sign In</string>
    <string name="register_button">Register</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="background">background</string>
    <string name="login_form_button">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Login_form_subtitle">Time is money</string>
    <string name="add_note">add_note</string>
    <string name="top_app_bar_title">Tasks</string>
    <string name="top_app_bar_settings_title">Settings</string>
    <string name="important_card">Important_card</string>
    <string name="edit_card">Edit_card</string>
    <string name="delete_card">Delete_card</string>
    <string name="logout">Logout</string>
    <string name="localization">Localization</string>

    <string name="drawer_menu_title_time">Show by Period</string>
    <string name="drawer_menu_title_category">Show by Category</string>
    <string name="overdue">Overdue</string>
    <string name="today">Next 24 Hours</string>
    <string name="tomorrow">Coming days</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="future">Future</string>
    <string name="map_view">Map</string>

    <string name="create_title">Create new task</string>
    <string name="edit_title">Edit task</string>
    <string name="name_hint">Name</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="time_hint">HH:mm</string>
    <string name="content_hint">Description</string>

    <string name="save_button">Save</string>

    <string name="russian">Russian</string>
    <string name="english">English</string>

    <string name="required">Required</string>
    <string name="password_error">Passwords are not equals</string>
</resources>