<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle1"
            android:title="@string/menu_title_1">
            <menu>
                <item
                    android:id="@+id/item1"
                    android:title="@string/overdue" />
                <item
                    android:id="@+id/item2"
                    android:title="@string/today" />
                <item
                    android:id="@+id/item3"
                    android:title="@string/tomorrow" />
                <item
                    android:id="@+id/item4"
                    android:title="@string/week" />
                <item
                    android:id="@+id/item5"
                    android:title="@string/month" />
                <item
                    android:id="@+id/item6"
                    android:title="@string/month_later" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle2"
            android:title="Subtitle 2">
            <menu>
                <item
                    android:id="@+id/item7"
                    android:title="Item 4" />

                <item
                    android:id="@+id/item8"
                    android:title="Item 5" />

            </menu>
        </item>
    </group>
</menu>